--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.co.jp/citations?user=YP2cGtMAAAAJ&hl=zh-CN"
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=YP2cGtMAAAAJ"
   email            : "fangpeng@hust.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -41,14 +41,14 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
-  linkedin         : #"rayeren"
+  linkedin         : 
   dblp             : "https://dblp.uni-trier.de/pid/86/9628-2.html"
-  orcid            : #"https://orcid.org/0000-0002-9160-3848"
+  orcid            : "https://orcid.org/0000-0003-4741-9282"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
   twitter          : 
