--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,5 @@ main:
   # - title: "Educations"
     # url: "/#-educations"
 
-  - title: "Invited Talks"
+  - title: "Invited Talks and Presentations"
     url: "/#-invited-talks"
