--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,5 @@ main:
   # - title: "Educations"
     # url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Talks and Presentations"
+    url: "/#-talks-and-presentations"
