--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  # - title: "Educations"
-    # url: "/#-educations"
-
   - title: "Talks and Presentations"
     url: "/#-talks-and-presentations"
+
+  - title: "Services"
+    # url: "/#-services"
