--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,31 +33,46 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install ruby-build
+      - name: Install system dependencies
         run: |
-          git clone https://github.com/rbenv/ruby-build.git
-          PREFIX=/usr/local ./ruby-build/install.sh
-      - name: Install Ruby using ruby-build
+          sudo apt-get update -y
+          sudo apt-get install -y git curl libssl-dev libreadline-dev zlib1g-dev build-essential
+      - name: Install rbenv
         run: |
-          RUBY_VERSION=3.1.4
-          INSTALL_PATH=/opt/hostedtoolcache/Ruby/${RUBY_VERSION}/x64
-          mkdir -p $(dirname $INSTALL_PATH)
-          ruby-build ${RUBY_VERSION} ${INSTALL_PATH}
-          touch ${INSTALL_PATH}.complete
-          echo "Ruby ${RUBY_VERSION} installed to ${INSTALL_PATH}"
-      - name: Add Ruby to PATH
+          git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+          echo "eval '$(rbenv init -)'" >> ~/.bashrc
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
+      - name: Install ruby-build plugin
         run: |
-          echo "/opt/hostedtoolcache/Ruby/3.1.4/x64/bin" >> $GITHUB_PATH
+          mkdir -p ~/.rbenv/plugins
+          git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+      - name: Install Ruby
+        run: |
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
+          rbenv install 3.1.4
+          rbenv global 3.1.4
+          ruby -v
       - name: Install Bundler
-        run: gem install bundler
+        run: |
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
+          gem install bundler
       - name: Install dependencies
-        run: bundle install
+        run: |
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
+          bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: |
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(rbenv init -)"
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
