update about me

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Peng Fang (方鹏)"
-description              : "Postdoc Research Fellow in DSAL, HUST and DB System, NUS. Focusing on System4AI, Graph Learning and Big data."
+description              : "Postdoc Research Fellow in HUST and NUS. Focusing on System4AI, Graph Learning and Big data."
 repository               : "rocmfang/rocmfang.github.io"
 google_scholar_stats_use_cdn : true
 
